--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@11ty/eleventy": "^0.10.0",
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "@dogstudio/highway": "^2.2.1",
     "del": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
@@ -20,6 +21,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "gsap": "^3.2.6",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
@@ -33,7 +35,8 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylus": "^2.7.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
     "gulp": "^4.0.2"
